# trackerkeeper

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  dough-board.toml  dough-breadboard.toml  dough-sync.toml  pyproject.toml  trackerkeeper-breadboard.toml
.claude/: settings.local.json
.github/: release-checklist-template.md
.github/workflows/: aur.yml  ci.yml  macos.yml  pypi-publish.yml  release-checklist.yml  release.yml  winget.yml
dev/: AGENTS.loaf.md  ctl.py  run.sh  shared.toml  sync.py  sync_loaf.py  update_translations.sh
docs/: ACCESSIBILITY.md  BACKPORT.md  BAKING.md  BREADBOARD.md  CHANGELOG.md  DELIVERY.md  DESIGN.md  MACOS.md  PHILOSOPHY.md  RELEASING.md  ROADMAP.md  SYNC.md  TEST_BRIDGE.md  TODO.md  TRANSLATING.md  WIND-DOWN.md
dough/: __init__.py  __main__.py  app.py  async_io.py  bake.py  board.py  boot_timing.py  breadboard.py  bus.py  color_tokens.py  credentials.py  custom_tooltip.py  deliver.py  design_tokens.py  diagnostics.py  frosted_dialog.py  icon_button.py  icons.py  identity.py  kde_titlebar.py  keyboard_focus.py  log.py  macos_menubar.py  metadata.py  platform_compat.py  rig.py  scaffold.py  selector.py  settings.py  settings_dialog.py  settings_migration.py  single_instance.py  smooth_scroll.py  system_accent.py  test_bridge.py  theme.py  top_bar.py  ui_helpers.py  update_chip.py  updates.py  (+3 more)
dough/assets/: __init__.py
dough/autostart/: __init__.py  _flatpak.py  _linux.py  _macos.py  _msix.py  _unsupported.py  _windows.py
dough/blur/: __init__.py  _dwm.py  _faux_frost.py  _kwin.py  _macos.py  _unsupported.py
dough/drag_repaint/: __init__.py  _kwin.py  _unsupported.py
dough/drag_repaint/effect/dragrepaint/: metadata.json
dough/drag_repaint/effect/dragrepaint/contents/code/: main.js
dough/i18n/: __init__.py  fmt.py
dough/noborder/: __init__.py  _kwin.py  _unsupported.py
dough/notifications/: __init__.py  _linux.py  _macos.py  _unsupported.py  _windows.py
dough/power/: __init__.py  _linux.py
packaging/: io.github.wolfgangwarehaus.dough.desktop  io.github.wolfgangwarehaus.dough.metainfo.xml  io.github.wolfgangwarehaus.trackerkeeper.desktop  io.github.wolfgangwarehaus.trackerkeeper.metainfo.xml
packaging/appimage/: build_appimage.sh  smoke_test_appimage.sh
packaging/aur/: PKGBUILD
packaging/deb/: build_deb.sh  smoke_test_deb.sh
packaging/macos/: dough.rb  entitlements.plist  trackerkeeper.rb
packaging/macos/mas/: entitlements.mas.plist  scan_symbols.sh  sign_mas.sh
packaging/msix/: AppxManifest.xml  STORE-SUBMISSION.md  make-assets.sh
packaging/pyinstaller/: dough.spec  launch.py  trackerkeeper.spec
packaging/templates/: {{app_id_base}}.desktop.j2  {{app_id_base}}.metainfo.xml.j2
packaging/templates/appimage/: build_appimage.sh.j2  smoke_test_appimage.sh.j2
packaging/templates/aur/: PKGBUILD.j2
packaging/templates/deb/: build_deb.sh.j2  smoke_test_deb.sh.j2
packaging/templates/macos/: entitlements.plist.j2  {{app_slug}}.rb.j2
packaging/templates/macos/mas/: entitlements.child.plist.j2  entitlements.mas.plist.j2  scan_symbols.sh.j2  sign_mas.sh.j2
packaging/templates/msix/: AppxManifest.xml.j2  STORE-SUBMISSION.md.j2  make-assets.sh.j2
packaging/templates/pyinstaller/: launch.py.j2  {{app_slug}}.spec.j2
packaging/templates/windows/: version_info.txt.j2  {{app_slug}}.iss.j2
packaging/windows/: dough.iss  trackerkeeper.iss  version_info.txt
tests/: conftest.py  test_a11y.py  test_app_wiring.py  test_bake.py  test_blur_kwin.py  test_board.py  test_boot.py  test_breadboard.py  test_bridge.py  test_bus.py  test_catalog.py  test_credentials.py  test_dashboard.py  test_deliver.py  test_diagnostics.py  test_drag_repaint.py  test_i18n.py  test_i18n_fmt.py  test_i18n_plurals.py  test_identity.py  test_imports.py  test_log.py  test_metadata.py  test_noborder.py  test_power_runtime.py  test_public_api.py  test_relative_time.py  test_rig.py  test_rtl_smoke.py  test_scaffold.py  test_settings_migration.py  test_single_instance_forwarding.py  test_sources.py  test_sync_loaf.py  test_tray.py  test_ui_helpers_widgets.py  test_updates.py  test_window_seams.py
trackerkeeper/: __init__.py  __main__.py  app.py  async_io.py  bake.py  boot_timing.py  breadboard.py  bus.py  catalog.py  color_tokens.py  credentials.py  custom_tooltip.py  dashboard.py  deliver.py  design_tokens.py  diagnostics.py  frosted_dialog.py  icon_button.py  icons.py  identity.py  item_dialog.py  kde_titlebar.py  keyboard_focus.py  log.py  macos_menubar.py  macos_window.py  metadata.py  platform_compat.py  rig.py  scaffold.py  selector.py  settings.py  settings_dialog.py  settings_migration.py  single_instance.py  smooth_scroll.py  sources.py  system_accent.py  terminal.py  test_bridge.py  (+9 more)
trackerkeeper/assets/: __init__.py
trackerkeeper/autostart/: __init__.py  _linux.py  _macos.py  _msix.py  _windows.py
trackerkeeper/blur/: __init__.py  _dwm.py  _faux_frost.py  _kwin.py  _macos.py  _unsupported.py
trackerkeeper/drag_repaint/: __init__.py  _kwin.py  _unsupported.py
trackerkeeper/drag_repaint/effect/dragrepaint/contents/code/: main.js
trackerkeeper/i18n/: __init__.py  fmt.py
trackerkeeper/noborder/: __init__.py  _kwin.py  _unsupported.py
trackerkeeper/notifications/: __init__.py  _linux.py  _macos.py  _windows.py
trackerkeeper/power/: __init__.py  _linux.py  _unsupported.py  _windows.py
