# trackerkeeper — the wolfgang warehaus app base. Fork this project, rename the
# `trackerkeeper` package + the identity fields below to your app, and build.
#
# Flat layout (the single `trackerkeeper/` package at the repo root, entry in
# `trackerkeeper/app.py`) so `python -m trackerkeeper` runs straight from a checkout with no
# install. Core stays PySide6-only — heavy/native deps (a PDF engine, mpv, a
# cast stack) belong in [project.optional-dependencies], never the base.

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# The PyPI DISTRIBUTION name — "trackerkeeper" is squatted on PyPI (a 2015 third-party
# package), so pip's name is trackerkeeper-base while the import package stays `trackerkeeper`
# (distribution name ≠ import name, like beautifulsoup4/bs4). `trackerkeeper new` pins
# a fork's name back to its slug.
name = "trackerkeeper"
# version is DYNAMIC — the tag is the version (docs/BAKING.md §2 principle 4).
# setuptools-scm derives it from the latest `git tag vX.Y.Z`; there is nothing
# to stamp in N files and therefore no version-drift class to gate against.
dynamic = ["version"]
description = "One dashboard for software & firmware updates across everything you own"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "august", email = "augustvontrips@gmail.com" }]
keywords = ["pyside6", "qt", "desktop", "starter", "template", "frosted-glass", "cross-platform", "kde", "windows"]
# PyPI Trove classifiers are a hand-maintained SECOND site, not yet rendered
# from [tool.trackerkeeper.metadata]. The License line is guarded against license_spdx by
# tests/test_metadata.py; the OS/Environment lines are a free-text platform fact
# a fork must edit by hand until the renderer derives them (license from
# license_spdx, OS/Env from a platform flag). They are distinct from the
# sidecar's freedesktop categories[] (a different taxonomy).
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
# runtime_deps (docs/BAKING.md §3.3 — "the one genuinely app-specific block")
# lives HERE, in [project].dependencies, as its single source; it is NOT
# duplicated into the sidecar. The Beat-2 renderer projects it onward (AUR
# depends, deb shlib closure, AppImage bundling) from this list.
dependencies = [
    # Core is PySide6 only — that's the whole point. Cap below Qt 7 (a hard
    # compat break); floor at the earliest API the chrome relies on.
    "PySide6>=6.6.0,<7.0",
]

[project.optional-dependencies]
# `bake` is the release tooling (trackerkeeper bake); jinja2 is build-time only — the
# shipped app never imports it. dev includes it so the generate-then-verify gate
# (tests/test_bake.py) runs in the default test pass.
bake = ["jinja2>=3"]
dev = [
    "ruff", "pytest", "pytest-xdist", "setuptools-scm>=8", "jinja2>=3",
    # the credentials-store test surface (keyring is mocked; AES-GCM is real)
    "keyring>=24",
    "cryptography>=42 ; sys_platform != 'win32'",
]
# Named-secret store (trackerkeeper/credentials.py): OS keyring primary + an encrypted
# QSettings resilience blob. cryptography is the AES-GCM arm — Linux/macOS only
# (no win_arm64 wheel; Windows uses ctypes DPAPI instead, zero extra deps).
credentials = [
    "keyring>=24",
    "cryptography>=42 ; sys_platform != 'win32'",
]
# macOS-native integration (pyobjc). darwin-only via env markers; the base stays
# PySide6-only, so these are OPT-IN — the lazy, guarded platform imports
# (notifications, autostart via ServiceManagement, Cocoa) degrade to UNSUPPORTED
# when pyobjc is absent. Deliberately NOT in `dev`/any aggregate: installing on a
# non-mac dev machine must never pull pyobjc. No pyobjc-framework-MediaPlayer —
# media_controls is excluded from the base (music-only, no libmpv).
macos = [
    "pyobjc-core>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-UserNotifications>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-ServiceManagement>=10.0 ; sys_platform == 'darwin'",
]

[project.gui-scripts]
trackerkeeper = "trackerkeeper.app:main"

[project.scripts]
# The oven: render packaging/ from [tool.trackerkeeper.metadata] (docs/BAKING.md §2).
trackerkeeper-bake = "trackerkeeper.bake:main"
# The entry verb for building WITH trackerkeeper: scaffold a fresh OWNED app from a clone.
trackerkeeper-new = "trackerkeeper.scaffold:main"
# The Delivery-phase walkthroughs: the channel board, per-channel activation,
# and the update lap (docs/DELIVERY.md).
trackerkeeper-deliver = "trackerkeeper.deliver:main"
# The live maker surface: goals + phase checklists, shared with the AI agent
# via trackerkeeper-breadboard.toml (docs/TODO.md §THE BREADBOARD).
trackerkeeper-breadboard = "trackerkeeper.breadboard:main"

[project.urls]
Homepage = "https://github.com/wolfgangwarehaus/trackerkeeper"
Repository = "https://github.com/wolfgangwarehaus/trackerkeeper"

# ── the baking-phase metadata sidecar (docs/BAKING.md §3) ────────────────────
# ONE source for app identity + descriptive/store metadata. The oven (a future
# `trackerkeeper bake`) renders every manifest — .desktop, metainfo, deb control, winget
# YAML, PKGBUILD, the landing page — from this table; none is hand-authored. The
# id projections (app_id_base / windows_aumid / cf_bundle_id) are COMPUTED from
# the slugs below via trackerkeeper.identity's pure helpers, never re-literalised. Where
# a field overlaps `[project]` (description↔summary, keywords, license,
# requires-python, the maintainer), the two are kept identical and
# tests/test_metadata.py asserts they never drift — the exact failure mode this
# table exists to kill (jellytoast carried six summary wordings and three
# publisher strings; see docs/BAKING.md §1).
[tool.trackerkeeper.metadata]
# Schema-versioned like color_tokens' PALETTE_VERSION: bump when the field set
# changes so the renderer and the verify gate move together.
metadata_version = 1

# the inputs everything else derives from
app_slug = "trackerkeeper"
org_slug = "wolfgangwarehaus"
github_owner = "wolfgangwarehaus"
repo_name = "trackerkeeper"
display_name = "tracker keeper"
generic_name = "App Base"
summary = "One dashboard for software & firmware updates across everything you own"
license_spdx = "GPL-2.0-or-later"

# descriptive / store metadata — the renderer's inputs; these never touch the
# running QApplication (that's trackerkeeper.identity's job — docs/BAKING.md §4).
long_description = """\
tracker keeper is one dashboard for the software and firmware updates across \
everything you own — apps, devices, and games, on every platform. It tells you \
what's new and links you straight to the changelog; it does NOT download, install, \
or apply updates — that stays entirely in your hands. It is a watchtower, not an \
updater. Because no single "latest version" API exists, tracker keeper is the \
uniform layer over a scattered world: it checks the sources it can automatically \
(GitHub releases, Arch packages, and more to come) and lets you track the rest by \
hand, sorted by what dropped today, with a notification when something new lands."""
maintainer_name = "august"
maintainer_email = "augustvontrips@gmail.com"
# Publisher display name — the spaced brand is a DISPLAY variant of org_slug,
# not a third source (resolves jellytoast's august/wolfgangwarehaus/wolfgang
# warehaus drift; docs/BAKING.md §9).
publisher_display_name = "wolfgang warehaus"
# A single freedesktop MAIN category (more than one risks a double menu entry —
# desktop-file-validate hint). trackerkeeper is developer tooling; a fork sets its own.
categories = ["Development"]
keywords = ["pyside6", "qt", "desktop", "starter", "template", "frosted-glass", "cross-platform", "kde", "windows"]
requires_python = ">=3.11"
entry_point = "trackerkeeper.app:main"
icon_svg_source = "trackerkeeper/assets/trackerkeeper.svg"
# Ko-fi / donation handle — set to light up the landing-page tip box and the
# metainfo <url type="donation">. Empty ⇒ the donation links are omitted.
kofi_handle = ""

# the 2×2 landing grid, also projected to the AppStream metainfo <ul>
feature_cards = [
  { title = "Frosted chrome", body = "A frameless, blurred, KDE-native window — rounded corners, a custom title bar, edge-resize and drag." },
  { title = "Token-driven design", body = "One palette source with live re-theming, exported to JSON the app and the landing page share." },
  { title = "Batteries, wired", body = "Single-instance, notifications, autostart and power inhibition — cross-platform and already plumbed." },
  { title = "Fork and own", body = "Set your identity once. No upstream dependency, no framework lock-in — the code is yours." },
]

# Screenshots for the AppStream metainfo (≥1, first is type=default) + the
# landing page + the store listings. Empty for now; the freedesktop renderer
# (Beat 2) warns when a release ships none. Each: {path, caption, alt, width, height}.
screenshots = []

# Single-instance identity that must be TRACKED, never regenerated, and never
# cross-contaminated between apps (docs/BAKING.md §9). `trackerkeeper bake <newapp>`
# mints a fresh uuid4 for inno_appid_guid; the MSIX values are Partner-Center-
# issued and left blank until the forker registers.
[tool.trackerkeeper.metadata.store_secrets_of_record]
# trackerkeeper's IMMUTABLE Inno installer identity — minted once (uuid4), never changed
# (changing it orphans installed users from upgrades). A fork mints its own.
inno_appid_guid = "DBBF328E-3F1A-4489-BE07-DBAF5D6014BA"
msix_publisher_cn = ""
msix_pfn = ""
msix_store_id = ""
# Apple Developer Team ID; blank ⇒ the macOS cask/notary leg stays dormant
# (docs/BAKING.md §9). Present so the metadata core already carries the mac
# fields, per §5 — flipping macOS on needs no re-derivation.
macos_team_id = ""

[tool.setuptools_scm]
# The tag is the version. setuptools-scm writes trackerkeeper/_version.py at build time
# (gitignored; trackerkeeper.__init__ reads it with a graceful source-checkout
# fallback). No tag yet ⇒ a dev version like 0.0.1.devN+gHASH; the first
# `git tag v0.1.0` makes it concrete.
version_file = "trackerkeeper/_version.py"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
include = ["trackerkeeper*"]
exclude = ["tests*", "docs*", "packaging*"]

[tool.setuptools.package-data]
# The brand SVG (trackerkeeper/assets/trackerkeeper.svg) ships in the wheel so make_app_icon
# resolves it via importlib.resources.
"trackerkeeper.assets" = ["*.svg"]
# The drag-repaint KWin scripted effect ships as data (a JSON + JS template pair
# carrying the {{app_id}} token) inside the trackerkeeper.drag_repaint package — rendered
# from the app identity and installed into the user's KWin effects dir at runtime
# by trackerkeeper/drag_repaint/_kwin.py.
"trackerkeeper.drag_repaint" = [
    "effect/dragrepaint/metadata.json",
    "effect/dragrepaint/contents/code/main.js",
]
# Compiled translation catalogs (trackerkeeper/i18n/trackerkeeper_<code>.qm) ship as package
# data so trackerkeeper.i18n.install resolves them via importlib.resources.
"trackerkeeper.i18n" = ["*.qm"]

[tool.pytest.ini_options]
# GUI tests run headless — conftest.py forces QT_QPA_PLATFORM=offscreen before
# any PySide6 import. xfail_strict makes the P0 contract self-enforcing: the
# known stand-alone-safety failures are written as xfails now and flip to HARD
# failures (forcing the marker's removal) the moment each fix lands.
testpaths = ["tests"]
xfail_strict = true
addopts = "-ra"

[tool.ruff]
# Wrap by editorial judgment, not a hard column (E501 off below). 100 is just
# the formatter's reflow target if anyone runs `ruff format` (we don't by default).
line-length = 100

[tool.ruff.lint]
# E, F, I, B — the jellytoast house set. E501 (line length) and E402
# (module-level lazy import, used to break import cycles / guard optional deps)
# are intentionally off.
select = ["E", "F", "I", "B"]
ignore = ["E501", "E402"]
